Revert: Move GC to ZGC in Dockerfile
Uses far too much memory